src/objects/Sales_Tax_Item__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Sales Tax Items</relationshipLabel>
        <relationshipName>Sales_Tax_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <formula>IF( Name__c == &apos;State Tax&apos;, 1, 
        IF(Name__c == &apos;County Tax&apos;, 2, 
            IF(Name__c == &apos;City Tax&apos;, 3, 
                IF(Name__c == &apos;District 1 Tax&apos;, 4, 
                    IF(Name__c == &apos;District 2 Tax&apos;, 5, 
                        IF(Name__c == &apos;District 3 Tax&apos;, 6, 
                            IF(Name__c == &apos;District 4 Tax&apos;, 7, 
                                IF(Name__c == &apos;District 5 Tax&apos;, 8, 10))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms_Label__c</fullName>
        <label>Forms Label</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Tax_Rate_Name__c</fullName>
        <label>Automated Tax Rate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Tax_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Taxable_Amount_Tier_1__c</fullName>
        <label>Max Taxable Amount Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Taxable_Amount_Tier_2__c</fullName>
        <label>Max Taxable Amount Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Tax_Amount__c</fullName>
        <label>Maximum Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Tax_Amount__c</fullName>
        <label>Minimum Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <description>Rate Type</description>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalating rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered rate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate</label>
        <precision>7</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Labour__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Labour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Misc__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Misc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Parts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_Tier_1__c</fullName>
        <label>Tax Rate Tier 1</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_Tier_2__c</fullName>
        <label>Tax Rate Tier 2</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_Tier_3__c</fullName>
        <label>Tax Rate Tier 3</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <description>Tax Type</description>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Units__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Removed</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Tax Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Tax_Type__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Name__c</columns>
        <columns>Rate__c</columns>
        <columns>Tax_Labour__c</columns>
        <columns>AccountingId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Tax Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rate_Should_be_positive</fullName>
        <active>true</active>
        <description>Rate should be zero or more than zero.</description>
        <errorConditionFormula>Rate__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Rate__c</errorDisplayField>
        <errorMessage>Rate should be zero or more than zero.</errorMessage>
    </validationRules>
</CustomObject>